--- a/WpfWithMVVM/WpfWithMVVM.csproj
+++ b/WpfWithMVVM/WpfWithMVVM.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Models\Printer.cs" />
     <Compile Include="Repo\FakeRepo.cs" />
     <Compile Include="ViewModels\AppViewModel.cs" />
+    <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\EditViewModel.cs" />
     <Compile Include="Views\EditView.xaml.cs">
       <DependentUpon>EditView.xaml</DependentUpon>
